deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apidocs-production
spec:
  selector:
    matchLabels:
      app: apidocs
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: apidocs
        env: production
    spec:
      containers:
      - name: swagger
        image: swaggerapi/swagger-ui
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 1m
      - name: schema-collector
        image: gcr.io/dd-decaf-cfbf6/schema-collector:master
        ports:
        - containerPort: 8900
        resources:
          requests:
            cpu: 1m
        command: ["gunicorn", "-w", "1", "-b", "0.0.0.0:8900", "-t", "20", "-k", "aiohttp.worker.GunicornWebWorker", "schema_collector.app:app"]
