deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: apidocs-production
spec:
  selector:
    app: apidocs
    env: production
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: schema
    protocol: TCP
    port: 8900
    targetPort: 8900
