deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apidocs
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    - api-staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: apidocs-production
          servicePort: 80
      - path: /openapi.json
        backend:
          serviceName: apidocs-production
          servicePort: 8900
  - host: api-staging.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: apidocs-staging
          servicePort: 80
      - path: /openapi.json
        backend:
          serviceName: apidocs-staging
          servicePort: 8900

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docs-to-api-redirect
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/permanent-redirect: https://api.dd-decaf.eu
spec:
  tls:
  - hosts:
    - docs.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: docs.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: apidocs-production
          servicePort: 80
